feat: ✨ implement hexagonal architecture for course module with new command and port interfaces