@@ -2,35 +2,27 @@ package br.com.pedroveras.courses_api.modules.course.useCases;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import br.com.pedroveras.courses_api.modules.course.CourseEntity;
 import br.com.pedroveras.courses_api.modules.course.CourseRepository;
-import br.com.pedroveras.courses_api.modules.course.CourseStatus;
-import br.com.pedroveras.courses_api.modules.course.dto.ListCourseDTO;
+import br.com.pedroveras.courses_api.modules.course.application.ports.in.ListCoursesInputPort;
 
 @Service
-public class ListCoursesUseCase {
-    
-    @Autowired
-    private CourseRepository courseRepository;
+public class ListCoursesUseCase implements ListCoursesInputPort {
+    private final CourseRepository courseRepository;
 
-    public List<ListCourseDTO> execute(){
+    public ListCoursesUseCase(CourseRepository courseRepository) {
+        this.courseRepository = courseRepository;
+    }
+
+    @Override
+    public List<CourseEntity> execute(){
         List<CourseEntity> courses = this.courseRepository.findAll();
 
         return courses.stream()
             .sorted(Comparator.comparing(CourseEntity::getCreatedAt))
-            .map(course -> new ListCourseDTO(
-                course.getId(),
-                course.getName(),
-                course.getDescription(),
-                course.getCategory(),
-                course.getActive() == CourseStatus.ACTIVE,
-                course.getCreatedAt(),
-                course.getUpdatedAt()
-            )).collect(Collectors.toList());
+            .toList();
     }
 }
